--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="menu_add_task">Add Task</string>
     <string name="menu_complete_task">Add to the List</string>
     <string name="add_activity_title">Add Task</string>
+    <string name="list_category">Category</string>
 </resources>
